java 8 compatible gppmodel tests