@@ -4,7 +4,6 @@ import java.time.ZoneId;
 import java.time.ZonedDateTime;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.List;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import com.iab.gpp.encoder.error.DecodingException;
@@ -18,8 +17,8 @@ import com.iab.gpp.encoder.field.UsCoV1Field;
 import com.iab.gpp.encoder.field.UsCtV1Field;
 import com.iab.gpp.encoder.field.UsNatV1Field;
 import com.iab.gpp.encoder.field.UsUtV1Field;
-import com.iab.gpp.encoder.field.UspV1Field;
 import com.iab.gpp.encoder.field.UsVaV1Field;
+import com.iab.gpp.encoder.field.UspV1Field;
 import com.iab.gpp.encoder.section.TcfCaV1;
 import com.iab.gpp.encoder.section.TcfEuV2;
 import com.iab.gpp.encoder.section.UsCaV1;
@@ -27,8 +26,8 @@ import com.iab.gpp.encoder.section.UsCoV1;
 import com.iab.gpp.encoder.section.UsCtV1;
 import com.iab.gpp.encoder.section.UsNatV1;
 import com.iab.gpp.encoder.section.UsUtV1;
-import com.iab.gpp.encoder.section.UspV1;
 import com.iab.gpp.encoder.section.UsVaV1;
+import com.iab.gpp.encoder.section.UspV1;
 
 public class GppModelTest {
 
@@ -656,9 +655,9 @@ public class GppModelTest {
     GppModel fromObjectModel = new GppModel();
 
     fromObjectModel.setFieldValue(TcfEuV2.NAME, TcfEuV2Field.PURPOSE_CONSENTS,
-        new ArrayList<>(List.of(true, true, true, true, true, true, true, true, true, true)));
+        Arrays.asList(true, true, true, true, true, true, true, true, true, true));
     fromObjectModel.setFieldValue(TcfEuV2.NAME, TcfEuV2Field.VENDOR_CONSENTS,
-        new ArrayList<>(List.of(32, 128, 81, 210, 755, 21, 173, 238)));
+        Arrays.asList(32, 128, 81, 210, 755, 21, 173, 238));
 
     Assertions.assertEquals(fromObjectModel.getSection(TcfEuV2.NAME).encode(),
         fromObjectModel.getSection(TcfEuV2.NAME).encode());
@@ -667,10 +666,10 @@ public class GppModelTest {
     GppModel decodedModel = new GppModel(fromObjectModel.encode());
 
     Assertions.assertEquals(
-        new ArrayList<>(List.of(true, true, true, true, true, true, true, true, true, true, false, false, false, false,
-            false, false, false, false, false, false, false, false, false, false)),
+        Arrays.asList(true, true, true, true, true, true, true, true, true, true, false, false, false, false,
+            false, false, false, false, false, false, false, false, false, false),
         decodedModel.getFieldValue(TcfEuV2.NAME, TcfEuV2Field.PURPOSE_CONSENTS));
-    Assertions.assertEquals(new ArrayList<>(List.of(21, 32, 81, 128, 173, 210, 238, 755)),
+    Assertions.assertEquals(Arrays.asList(21, 32, 81, 128, 173, 210, 238, 755),
         decodedModel.getFieldValue(TcfEuV2.NAME, TcfEuV2Field.VENDOR_CONSENTS));
 
   }
